--- a/droneyourfood/pubspec.yaml
+++ b/droneyourfood/pubspec.yaml
@@ -28,9 +28,9 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.0
-  mongo_dart:
-    git:
-      url: https://github.com/mongo-dart/mongo_dart.git
+  #mongo_dart:
+    #git:
+      #url: https://github.com/mongo-dart/mongo_dart.git
 
 dev_dependencies:
   flutter_test:
