--- a/droneyourfood/pubspec.yaml
+++ b/droneyourfood/pubspec.yaml
@@ -27,6 +27,7 @@ dependencies:
   firebase_core: "0.5.1"
   firebase_auth: "0.18.2"
   cloud_firestore: "0.14.2"
+  google_sign_in: "^4.5.1"
 
 
   # The following adds the Cupertino Icons font to your application.
