--- a/droneyourfood/pubspec.yaml
+++ b/droneyourfood/pubspec.yaml
@@ -26,6 +26,7 @@ dependencies:
 
   firebase_core: "0.5.1"
   firebase_auth: "0.18.2"
+  firebase_storage: "^4.0.1"
   cloud_firestore: "0.14.2"
   google_sign_in: "^4.5.1"
 
