--- a/droneyourfood/pubspec.yaml
+++ b/droneyourfood/pubspec.yaml
@@ -24,11 +24,12 @@ dependencies:
   flutter:
     sdk: flutter
 
-  firebase_core: "0.5.1"
-  firebase_auth: "0.18.2"
-  firebase_storage: "^4.0.1"
-  cloud_firestore: "0.14.2"
-  google_sign_in: "^4.5.1"
+  image_picker: "^0.6.7+14"
+  firebase_core: "^0.5.2"
+  firebase_auth: "^0.18.3"
+  firebase_storage: "^5.0.1"
+  cloud_firestore: "^0.14.3"
+  google_sign_in: "^4.5.6"
 
 
   # The following adds the Cupertino Icons font to your application.
