--- a/droneyourfood/pubspec.yaml
+++ b/droneyourfood/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_storage: "^5.0.1"
   cloud_firestore: "^0.14.3"
   google_sign_in: "^4.5.6"
+  http: "^0.12.0+2"
 
 
   # The following adds the Cupertino Icons font to your application.
