--- a/droneyourfood/pubspec.yaml
+++ b/droneyourfood/pubspec.yaml
@@ -30,6 +30,7 @@ dependencies:
   firebase_storage: "^5.0.1"
   cloud_firestore: "^0.14.3"
   google_sign_in: "^4.5.6"
+  flutter_gherkin: ^1.1.9
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -40,6 +41,9 @@ dependencies:
       #url: https://github.com/mongo-dart/mongo_dart.git
 
 dev_dependencies:
+  flutter_driver:
+    sdk: flutter
+  test: any
   flutter_test:
     sdk: flutter
 
