--- a/droneyourfood/pubspec.yaml
+++ b/droneyourfood/pubspec.yaml
@@ -42,6 +42,7 @@ dev_dependencies:
     sdk: flutter
   test: any
   flutter_gherkin: ^1.1.9
+  mockito: ^4.1.3
 
   flutter_launcher_icons: "^0.8.0"
 
